feat(slider): agrega descarga informe + remueve paso medicacion

--- a/_includes/process.html
+++ b/_includes/process.html
@@ -10,7 +10,7 @@
             <img class="image-slide active" src="./assets/img/nv_screen-01.jpg" alt="Evaluación Pre anestésica">
             <img class="image-slide" src="./assets/img/nv_screen-02.jpg" alt="Protocolo anestésico">
             <img class="image-slide" src="./assets/img/nv_screen-03.jpg" alt="Recuperación postanestésica">
-            <img class="image-slide" src="./assets/img/nv_screen-04.jpeg" alt="Medicación e informes">
+            <!-- <img class="image-slide" src="./assets/img/nv_screen-04.jpeg" alt="Medicación e informes"> -->
         </div>
 
         <div id="zoom-modal" class="zoom-modal">
@@ -22,7 +22,7 @@
             <label class="radio-btn active" onclick="goToSlide(0)"></label>
             <label class="radio-btn" onclick="goToSlide(1)"></label>
             <label class="radio-btn" onclick="goToSlide(2)"></label>
-            <label class="radio-btn" onclick="goToSlide(3)"></label>
+            <!-- <label class="radio-btn" onclick="goToSlide(3)"></label> -->
         </div>
     </div>
 
@@ -59,14 +59,19 @@
                 </div>
             </div>
             
-            <div class="sidebar__step" onclick="goToSlide(3)">
+            <!-- <div class="sidebar__step" onclick="goToSlide(3)">
                 <div class="step__bullet fa fa-plus"></div>
                 <div class="step-content">
                     <div class="step__prefix">ADICIONALES</div>
                     <div class="step__title">Medicación e informes</div>
                     <p class="step__description">Registro de medicación antálgica administrada y prescrita, con informes de función ventricular, perfusión coronaria, anatomía valvular y patologías cardíacas.</p>
                 </div>
-            </div>
+            </div> -->
         </section>
+        <footer class="sidebar__footer">
+            <a href="./assets/img/informe-modelo.pdf" download="informe-modelo.pdf" target="_blank" class="btn__primary">
+                Descargar informe modelo
+            </a>
+        </footer>
     </aside>
 </div>
