feat(stepper): informe abre en pestaña nueva

--- a/_includes/process.html
+++ b/_includes/process.html
@@ -58,18 +58,9 @@
                     <p class="step__description">Registro de signos vitales en recuperación, evaluación del dolor, detección de complicaciones y verificación de condiciones necesarias para el egreso.</p>
                 </div>
             </div>
-            
-            <!-- <div class="sidebar__step" onclick="goToSlide(3)">
-                <div class="step__bullet fa fa-plus"></div>
-                <div class="step-content">
-                    <div class="step__prefix">ADICIONALES</div>
-                    <div class="step__title">Medicación e informes</div>
-                    <p class="step__description">Registro de medicación antálgica administrada y prescrita, con informes de función ventricular, perfusión coronaria, anatomía valvular y patologías cardíacas.</p>
-                </div>
-            </div> -->
         </section>
         <footer class="sidebar__footer">
-            <a href="./assets/img/informe-modelo.pdf" download="informe-modelo.pdf" target="_blank" class="btn__primary">
+            <a href="./assets/img/informe-modelo.pdf" target="_blank" class="btn__primary">
                 Descargar informe modelo
             </a>
         </footer>
