--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,6 @@
+---
+---
+
 * {
     margin: 0;
     padding: 0;
@@ -1731,3 +1734,5 @@ footer {
             opacity: 1;
         }
     }
+
+/* WhatsApp button test - force recompilation */
