Add WhatsApp float icon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <header class="section__header">
         <h2 class="section__title">Contacto</h2>
             <p class="section__description">
-                Para programar una demo o realizar consultas puede contactarnos a <a class="btn__tertiary" href="mailto:nivo@cares.ar">nivo@cares.ar</a>
+                Para programar una demo o realizar consultas puede contactarnos a <a class="btn__tertiary" href="mailto:nivo@cares.ar">nivo@cares.ar</a> o usar el botón de WhatsApp flotante.
             </p>
         <div class="btn__container">
         </div>
